Changes selectors, methods fixed, elements from Abstract Component moved to a new MainMenu class. Fixes code smell