@@ -1,36 +1,35 @@
-package shop.PageObjects;
+package shop.pageobjects;
 
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.support.PageFactory;
-import shop.AbstractComponents.AbstractComponent;
+import shop.abstractcomponents.AbstractComponent;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CartPage extends AbstractComponent {
 
-    WebDriver driver;
+    WebDriver childDriver;
 
     public CartPage(WebDriver driver) {
         super(driver);
-        this.driver = driver;
+        this.childDriver = driver;
         PageFactory.initElements(driver, this);
     }
 
-    @FindBy(className="title")
-    WebElement pageName;
+    @FindBy(css = ".title")
+    private WebElement pageName;
 
-    @FindBy(className="cart_item")
-    List<WebElement> cartItems;
+    @FindBy(css = ".cart_item")
+    private List<WebElement> cartItems;
 
-    @FindBy(id="continue-shopping")
-    WebElement continueShoppingButton;
+    @FindBy(css = "#continue-shopping")
+    private WebElement continueShoppingButton;
 
-    @FindBy(css=".checkout_button")
-    WebElement checkoutButton;
+    @FindBy(css = ".checkout_button")
+    private WebElement checkoutButton;
 
     By removeFromCartBy = By.cssSelector("div[class='cart_item'] button");
     By cartItemNameBy = By.cssSelector(".inventory_item_name");
@@ -41,7 +40,7 @@ public class CartPage extends AbstractComponent {
 
     public boolean getMatch(String productName) {
         //return cartItems.stream().anyMatch(item -> item.getText().equalsIgnoreCase(productName)); // not "filter" but "anyMatch"! anyMatch returns boolean value
-        return getSingleProductByName(productName)!=null;
+        return getSingleProductByName(productName) != null;
     }
 
     public boolean noMatch(String productName) {
@@ -50,7 +49,7 @@ public class CartPage extends AbstractComponent {
 
     public CheckoutAddressPage goToCheckoutAddress() {
         checkoutButton.click();
-        return new CheckoutAddressPage(driver);
+        return new CheckoutAddressPage(childDriver);
     }
 
     public boolean isCartEmpty() {
@@ -58,11 +57,10 @@ public class CartPage extends AbstractComponent {
     }
 
     public WebElement getSingleProductByName(String productName) {
-        WebElement prod = cartItems.stream().
+        return cartItems.stream().
                 filter(product -> product.findElement(cartItemNameBy)
                         .getText().equals(productName))
                 .findFirst().orElse(null); // we're NOT searching for that name, we're searching for a product (entire box) that has such a div with this name.
-        return prod;
     }
 
     public void removeProductFromCart(String productName) {
@@ -71,21 +69,15 @@ public class CartPage extends AbstractComponent {
     }
 
     public List<String> getProductNamesList() {
-        /*List<String> cartItemNames = new ArrayList<>();
-        for(WebElement cartItem : cartItems) {
-            String cartItemName = cartItem.findElement(cartItemNameBy).getText();
-            cartItemNames.add(cartItemName);
-        }*/
-        List<String> cartItemNames = cartItems.stream()
+        return cartItems.stream()
                 .map(cartItem -> cartItem.findElement(cartItemNameBy).getText())
-                .collect(Collectors.toList());
-        return cartItemNames;
+                .toList();
     }
 
     public ProductPage clickOnProduct(String productName) {
         WebElement prod = getSingleProductByName(productName); // searching for a specific product
         prod.findElement(cartItemNameBy).click(); // clicking on product's name to access its page
-        return new ProductPage(driver);
+        return new ProductPage(childDriver);
     }
 
     public void continueShopping() {
