@@ -1,45 +1,44 @@
-package shop.PageObjects;
+package shop.pageobjects;
 
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.support.PageFactory;
-import shop.AbstractComponents.AbstractComponent;
+import shop.abstractcomponents.AbstractComponent;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CheckoutOverviewPage extends AbstractComponent {
 
-    WebDriver driver;
+    WebDriver childDriver;
 
     public CheckoutOverviewPage(WebDriver driver) {
         super(driver);
-        this.driver = driver;
+        this.childDriver = driver;
         PageFactory.initElements(driver, this);
     }
 
-    @FindBy(className="title")
-    WebElement pageName;
+    @FindBy(css = ".title")
+    private WebElement pageName;
 
-    @FindBy(css="button#finish")
-    WebElement finishButton;
+    @FindBy(css = "button#finish")
+    private WebElement finishButton;
 
-    @FindBy(id="cancel")
-    WebElement cancelButton;
+    @FindBy(css = "#cancel")
+    private WebElement cancelButton;
 
-    @FindBy(className="cart_item")
-    List<WebElement> cartItems;
+    @FindBy(css = ".cart_item")
+    private List<WebElement> cartItems;
 
-    @FindBy(css=".summary_subtotal_label")
-    WebElement cartValue;
+    @FindBy(css = ".summary_subtotal_label")
+    private WebElement cartValue;
 
-    @FindBy(css=".summary_tax_label")
-    WebElement taxValue;
+    @FindBy(css = ".summary_tax_label")
+    private WebElement taxValue;
 
-    @FindBy(css=".summary_total_label")
-    WebElement taxedCartValue;
+    @FindBy(css = ".summary_total_label")
+    private WebElement taxedCartValue;
 
     By cartItemNameBy = By.cssSelector(".inventory_item_name");
 
@@ -49,7 +48,7 @@ public class CheckoutOverviewPage extends AbstractComponent {
 
     public ConfirmationPage goToConfirmation() {
         finishButton.click();
-        return new ConfirmationPage(driver);
+        return new ConfirmationPage(childDriver);
     }
 
     public void cancelOrder() {
@@ -57,29 +56,22 @@ public class CheckoutOverviewPage extends AbstractComponent {
     }
 
     public List<String> getProductNamesList() {
-        /*List<String> cartItemNames = new ArrayList<>();
-        for(WebElement cartItem : cartItems) {
-            String cartItemName = cartItem.findElement(cartItemNameBy).getText();
-            cartItemNames.add(cartItemName);
-        }*/
-        List<String> cartItemNames = cartItems.stream()
+        return cartItems.stream()
                 .map(cartItem -> cartItem.findElement(cartItemNameBy)
-                        .getText()).collect(Collectors.toList());
-        return cartItemNames;
+                        .getText()).toList();
     }
 
     public WebElement getSingleProductByName(String productName) {
-        WebElement prod = cartItems.stream().
+        return cartItems.stream().
                 filter(product -> product.findElement(cartItemNameBy)
                         .getText().equals(productName))
                 .findFirst().orElse(null); // we're NOT searching for that name, we're searching for a product (entire box) that has such a div with this name.
-        return prod;
     }
 
     public ProductPage clickOnProduct(String productName) {
         WebElement prod = getSingleProductByName(productName); // searching for a specific product
         prod.findElement(cartItemNameBy).click(); // clicking on product's name to access its page
-        return new ProductPage(driver);
+        return new ProductPage(childDriver);
     }
 
     public Double getItemTotal() { // cart total value (excluding tax) listed on the page
@@ -90,9 +82,8 @@ public class CheckoutOverviewPage extends AbstractComponent {
         List<Double> prices = cartItems.stream()
                 .map(product -> product.findElement(By.className("inventory_item_price"))
                         .getText().replace("$", "").trim())
-                .map(Double::valueOf).collect(Collectors.toList());
-        Double sum = prices.stream().mapToDouble(Double::doubleValue).sum();
-        return sum;
+                .map(Double::valueOf).toList();
+        return prices.stream().mapToDouble(Double::doubleValue).sum();
     }
 
     public Double getTax() { // tax value listed on the page
@@ -100,9 +91,7 @@ public class CheckoutOverviewPage extends AbstractComponent {
     }
 
     public Double calculateTax() { // calculated 8% tax
-        Double tax = calculateCartTotalValue()*0.08;
-        Double taxRounded = Math.round(tax*100.0)/100.0;
-        return taxRounded;
+        return Math.round((calculateCartTotalValue() * 0.08) * 100.0) / 100.0;
     }
 
     public Double getSum() {
@@ -110,9 +99,7 @@ public class CheckoutOverviewPage extends AbstractComponent {
     }
 
     public Double calculateSum() { // calculated sum of cart with tax
-        Double sum = calculateCartTotalValue()+calculateTax();
-        Double sumRounded = Math.round(sum*100.0)/100.0;
-        return sumRounded;
+        return Math.round((calculateCartTotalValue() + calculateTax()) * 100.0) / 100.0;
     }
 
 
